--- a/mouselight.html
+++ b/mouselight.html
@@ -48,7 +48,7 @@
         });
 
         function lerp(start, end, amt) {
-            return (1 - amt) * start + amt * end;
+            return (1 - amt) * start + amt * end;''
         }
 
         function draw() {
